@@ -52,7 +52,7 @@ function &adodb_connect()
   if (FALSE == $connect_result) {
     $str = "Attempt to connect to database {$config['db_name']} on {$config['db_username']}@{$config['db_hostname']} failed";
     trigger_error($str,E_USER_ERROR);
-    die($str);
+	throw new CmsException($str);
   }
 
   $dbinstance->raiseErrorFn = null;
