@@ -1115,36 +1115,6 @@ abstract class CMSModule
   }
 
   /**
-   * Returns whether or not modules should be autoupgraded while upgrading
-   * CMS versions.  Generally only useful for modules included with the CMS
-   * base install, but there could be a situation down the road where we have
-   * different distributions with different modules included in them.	 Defaults
-   * to TRUE, as there is not many reasons to not allow it.
-   *
-   * @abstract
-   * @return boolean
-   */
-  public function AllowAutoInstall()
-  {
-    return TRUE;
-  }
-
-  /**
-   * Returns whether or not modules should be autoupgraded while upgrading
-   * CMS versions.  Generally only useful for modules included with the CMS
-   * base install, but there could be a situation down the road where we have
-   * different distributions with different modules included in them.	 Defaults
-   * to TRUE, as there is not many reasons to not allow it.
-   *
-   * @abstract
-   * @return boolean
-   */
-  public function AllowAutoUpgrade()
-  {
-    return TRUE;
-  }
-
-  /**
    * Returns a list of dependencies and minimum versions that this module
    * requires. It should return an hash, eg.
    * return array('somemodule'=>'1.0', 'othermodule'=>'1.1');
